# AudioPlayer

./: .gitignore  CMakeLists.txt
.github/workflows/: build-ffmpeg-macos.yml
include/: AudioPlayer.h  Downloader.h  LibraryManager.h  Logger.h  SettingsManager.h  TextureLoader.h  Textures.h  UIState.h  Utils.h
src/: AudioPlayer.cpp  Downloader.cpp  LibraryManager.cpp  Logger.cpp  SettingsManager.cpp  TextureLoader.cpp  Utils.cpp  main.cpp
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/miniaudio/: miniaudio.c
vendors/miniaudio/extras/: stb_vorbis.c
vendors/tinyfiledialogs/: tinyfiledialogs.c  tinyfiledialogs.h
vendors/yt-dlp/: ffmpeg  ffmpeg_macos
